Some changes in webelement locators

--- a/src/test/resources/Config/elementlocator.properties
+++ b/src/test/resources/Config/elementlocator.properties
@@ -1,12 +1,12 @@
-HomePage.Services=linktext:Services
-HomePage.ContactUs=linktext:Contact
+HomePage.Services=id:menu-item-18924
+HomePage.ContactUs=id:menu-item-18894
 
 
-ContactUsPage.Message=tagname:h2
-ContactUSPage.NameLocator=id:ctl00_MainContent_NameBox
-ContactUSPage.EmailLocator=id:ctl00_MainContent_EmailBox
-ContactUSPage.MessageLocator=id:ctl00_MainContent_MessageBox
-ContactUsPage.SubmitMessageLocator=id:ctl00_MainContent_SendButton
+ContactUsPage.Message=name:your-company
+ContactUSPage.NameLocator=name:your-name
+ContactUSPage.EmailLocator=name:your-email
+ContactUSPage.MessageLocator=name:your-message
+ContactUsPage.SubmitMessageLocator=id:contact-us-send
 
 
 SummaryPage.NameLocator=id:ctl00_MainContent_NameBox
